--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,32 @@ nav {
 .App {
     text-align: center;
 }
+
+.searchbar-container {
+    display: flex;
+    gap: 4vw;
+    margin: 0px auto;
+    padding: 0 20px;
+    align-itens: center;
+}
+
+.searchbar {
+    background-color: white;
+    margin-right: 20px;
+}
+
+.searchbar input {
+    padding: 10px;
+    box-shadow: 0px 2px 2px (0, 0, 0, 0.25);
+    border-radius: 3px;
+    border: none
+}
+
+.search-btn {
+    background-color: #0e6f9f;
+    border: none;
+    border-radius: 10px;
+    height: 44px;
+    color: white;
+    padding: 10px 12px;
+}
