--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,17 @@ nav {
     color: white;
     padding: 10px 12px;
 }
+
+.pokedex-header {
+    display:flex;
+    flex-derection: row;
+    justify-content:space-between;
+    align-itens:center;
+    padding: 10px;
+}
+
+.pokedex-grid {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(3, 1fr)
+}
