--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
-    margin: 0px;
+    margin: 0px 0px;
+    padding:0px;
 }
 
 
@@ -65,17 +66,22 @@ nav {
 .pokemon-card {
     display: flex;
     box-shadow: 4px 4px 4px (0, 0, 0, 0.25);
-    border-radius: 3px;
+    color: white;
 }
 
 .pokemon-image {
+    
     widht: 70px;
     height: 70px;
     margin-right: 10px;
 }
 
 .pokemon-image-container {
-    padding: 0px 5px;
+    padding: 12px 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .card-body {
@@ -104,13 +110,24 @@ nav {
  justify-content: space-between;
 }
 
-.pokemon-type {
-    display: flex;
-}
 
 .pokemon-type-text {
-    margin-right: 10px;
-    text-transform: captalize;
+    height: 15px;
+    width: 10vw;
+    white-space: nowrap;
+    margin-top: 5px;
+    margin-left: 1px;
+    font-size: 12px;
+}
+
+.pokemon-type {
+    padding: 0px;
+}
+
+.pokemon-heart-btn {
+display: flex;
+ position: relative;
+ right: 20px;
 }
 
 .pagination-container {
@@ -128,3 +145,4 @@ nav {
 .paination-container-right {
 
 }
+
